March 1, 2023 -  **v4.0.3**
                 Compatibility with cryoSPARC v4.2
                 Fixed an error importing volumes with halves
                 Fixed an error launching the protocols viewers
Jan 24, 2023 -  **v4.0.2**
                - Compatibility with v4.1.2 CS version
                - Creating an environment for pyem package
                - 3D homogeneous refinement(Legacy), 3D non-uniform refinement(Legacy) and Naive local refinement(Legacy) protocols are deprecated

Jan 18, 2023 -  - Compatibility with v4.1.1 CS version
                **v4.0.1**
Nov 8, 2022  -  - Compatibility with v4.0.x CS version
                **v4.0.0**

Oct 25, 2022  - Hot fixes
                **v3.3.19**
                * **fixed**   : Fixed an error related to Phase Randomized Masket Map calculation


Sept 7, 2022  - Adding functionalities (v3.3.18)
                **v3.3.18**
                -----------
                * **new** *   : Allow to import .cs particles files

Sept 1, 2022  - Fixing errors (v3.3.17)
                **v3.3.17**
                -----------
                * **fixed**    : Allow 31 or more classes in the 3D classification protocol


Jun 23, 2022  - Fixing errors (v3.3.16)
                **v3.3.16**
                -----------
                * **fixed**    : Fixed an error related with the slow loading protocols
                * **fixed**    : Fixed an error in the 3D classification protocol

Jun 15, 2022  - Compatibility with v3.3.3 CS version (v3.3.15)

Jun 10, 2022  - Redefining CS commands in order to launch the protocols in a cluster
                **v3.3.14**
                ----------
                * **new**      : Added the option to use the plugin in a CS installation in a cluster
                * **new**      : Added a wizard to select the lane where the protocols will be launched
                * **new**      : Added the varaiable CRYOSPARC_DEFAULT_LANE to define the name of the cryoSPARC default lane