@@ -55,18 +55,6 @@ PYEM_ACTIVATION_CMD = 'conda activate %s' % (getPyemEnvName(PYEM_VERSION))
 
 # Supported versions:
 V_UNKNOWN ='v0.0.0'
-V2_5_0 = 'v2.5.0'
-V2_8_0 = 'v2.8.0'
-V2_9_0 = 'v2.9.0'
-V2_11_0 = 'v2.11.0'
-V2_12_0 = 'v2.12.0'
-V2_12_2 = 'v2.12.2'
-V2_12_4 = 'v2.12.4'
-V2_13_0 = 'v2.13.0'
-V2_13_2 = 'v2.13.2'
-V2_14_0 = 'v2.14.0'
-V2_14_2 = 'v2.14.2'
-V2_15_0 = 'v2.15.0'
 V3_0_0 = 'v3.0.0'
 V3_0_1 = 'v3.0.1'
 V3_1_0 = 'v3.1.0'
@@ -82,6 +70,7 @@ V4_1_0 = 'V4.1.0'
 V4_1_1 = 'V4.1.1'
 V4_1_2 = 'V4.1.2'
 V4_2_0 = 'V4.2.0'
+V4_2_1 = 'V4.2.1'
 
 # Symmetry dict
 CS_SYM_NAME = dict()
