@@ -42,7 +42,7 @@ class ProtCryoSparc3DFlexReconstruction(ProtCryosparcBase):
     """
     _label = '3D flex reconstruction'
     _devStatus = BETA
-    _protCompatibility = [V4_1_0, V4_1_1, V4_1_2, V4_2_0]
+    _protCompatibility = [V4_1_0, V4_1_1, V4_1_2, V4_2_0, V4_2_1]
 
     # --------------------------- DEFINE param functions ----------------------
     def _defineFileNames(self):
