@@ -59,7 +59,7 @@ class ProtCryoSparcLocalRefine(ProtCryosparcBase, ProtOperateParticles):
     _devStatus = NEW
     _protCompatibility = [V3_0_0, V3_1_0, V3_2_0, V3_3_0, V3_3_1, V3_3_2,
                           V4_0_0,  V4_0_1, V4_0_2, V4_0_3, V4_1_0, V4_1_1,
-                          V4_1_2, V4_2_0]
+                          V4_1_2, V4_2_0, V4_2_1]
     _className = "new_local_refine"
     _fscColumns = 6
 
